# guided-framework

./: LICENSE  README.md  pixi.toml
libs/ml-static/: README.md  pyproject.toml
libs/ml-static/configs/: conf_finetune.yaml  conf_mlflow.yaml  conf_model_linear_init.yaml  conf_model_preproc_padded.yaml  conf_model_rbf_init.yaml  conf_run.yaml  experiment_suite_A.yaml  experiment_suite_B.yaml  experiment_suite_C.yaml  experiment_suite_D.yaml
libs/ml-static/configs/effective/anaheim_base_dirich/: conf_run_effective.yaml
libs/ml-static/configs/effective/anaheim_base_lm/: conf_model_preproc_padded_effective.yaml  conf_run_effective.yaml
libs/ml-static/scripts/: generate_masks.py
libs/ml-static/src/ml_static/: batch_runner.py  config.py  context_manager.py  data.py  early_stopping.py  factories.py  loss_curriculum.py  losses.py  reporting.py  run.py  tracker.py  training.py
libs/ml-static/src/ml_static/models/: HetGAT.py
libs/ml-static/src/ml_static/models/components/: initializers.py  od_initializers.py  predictors.py
libs/ml-static/src/ml_static/transforms/: builders.py  scalers.py  sequential.py
libs/ml-static/src/ml_static/utils/: __init__.py  run_names.py
libs/scenario-generation/: README.md  pyproject.toml
libs/scenario-generation/src/scenario_generation/: generate_scenarios.py
libs/static-assignment/: README.md  pyproject.toml
libs/static-assignment/src/static_assignment/: od_convert.py  sta.py  sta_run.py  sta_test.py
networks/anaheim/: link_mask.pt
networks/chicago/: link_mask.pt
